# energy_saving

./: .gitignore  AUTHORS  ChangeLog  README.md  ez_setup.py  log  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
conf/: celeryconfig  energy-saving-celeryd  energy-saving.conf  jupyter.service  jupyter_notebook_config.py  my.cnf  ntp.conf  setting  settings  step-tickers
energy_saving/api/: __init__.py  admin_api.py  api.py  exception_handler.py  utils.py
energy_saving/db/: .models.py.swp  database.py  exception.py  models.py  timeseries.py
energy_saving/db/migration/: alembic.ini  cli.py
energy_saving/db/migration/alembic_migrations/: env.py
energy_saving/db/migration/alembic_migrations/versions/: 20c4b8156f4f_init.py  22a076a0794f_remove_slo.py  47e5c57d3932_add_test_result_properties.py  5e39b15afd90_add_differentiation.py  65e726eb9e84_init.py  7a4549aae66a_add_name_pattern.py  821e57bc5d7d_add_slo.py  86e07c5f30f0_init.py  89c27d0e7e07_add_properties_in_data.py  9a7e0d985b98_init.py  HEAD  HEADS  a031a37ce81d_remove_prediction.py  b40fa7428e38_init.py  ba86a761fbb8_init.py
energy_saving/models/: base_model.py  base_model_builder.py  base_model_type.py  base_model_type_builder.py  controller_attribute_optimazation_model_type_builder.py  controller_attribute_recovery_model_type_builder.py  controller_parameter_optimazation_model_type.py  controller_parameter_prediction_model_type.py  controller_parameter_prediction_model_type_builder.py  decision_model_type.py  decision_model_type_builder.py  linear_regression_model.py  linear_regression_model_builder.py  model_builder_manager.py  model_manager.py  model_type_builder_manager.py  model_type_manager.py  pue_prediction_model_type.py  pue_prediction_model_type_builder.py  random_forest_model_builder.py  sensor_attribute_prediction_model_type.py  sensor_attribute_prediction_model_type_builder.py
energy_saving/tasks/: client.py  tasks.py
energy_saving/templates/: index.html
energy_saving/utils/: celeryconfig.py  logsetting.py  settings.py  util.py
install/: install.conf  install.sh
models/: controller_attributes_optimazation.json  pue_prediction.json  sensor_attributes_prediction.json
samples/database/: Controller_2017-07-13_11-24-47.csv  Controller_Attr_2017-07-13_11-26-18.csv  Controller_Attr_Data_2017-07-13_11-26-12.csv  Controller_Param_2017-07-13_11-24-15.csv  Controller_Param_Data_2017-07-13_11-24-30.csv  Controller_Param_Prediction_2017-07-13_11-25-09.csv  Controller_Power_Supply_2017-07-13_11-24-55.csv  Controller_Power_Supply_Attr_2017-07-13_11-25-32.csv  Controller_Power_Supply_Attr_Data_2017-07-13_11-25-17.csv  Environment_Sensor_Attr_2017-07-13_11-25-58.csv  Power_Supply_2017-07-13_11-25-52.csv  Power_Supply_Attr_Data_2017-07-13_11-25-46.csv  Sensor_2017-07-13_11-25-03.csv  Sensor_Attr_2017-07-13_11-24-23.csv  Sensor_Attr_Data_2017-07-13_11-25-26.csv  Sensor_Attr_S_L_O_2017-07-13_11-25-37.csv  controller.csv  controller_attribute.csv  controller_attribute_data.csv  controller_parameter.csv  controller_parameter_data.csv  controller_power_supply.csv  controller_power_supply_attribute.csv  controller_power_supply_attribute_data.csv  datacenter.csv  power_supply.csv  power_supply_attribute.csv  power_supply_attribute_data.csv  sensor.csv  sensor_attribute.csv  sensor_attribute_data.csv  sensor_attribute_slo.csv
web/: README.md  package-lock.json  package.json  webpack.config.js
web/src/: index.html  index.js  store.js
web/src/actions/: elementAction.js  modelAction.js  taskAction.js  utilAction.js
web/src/components/: action.js  deviceDetail.js  deviceTypeDetail.js  measurement-list.js  measurementDetail.js  measurementList.js  model-list.js  noFound.js  show-data.js  showData.js  task.js  taskDetail.js
web/src/components/element/: highCharts.js  timeSelectDialog.js
web/src/layout/: normalLayout.js
web/src/reducers/: elementReducer.js  index.js  modelReducer.js  taskReducer.js  utilReducer.js
web/src/sass/: _utils.scss  main.scss
web/src/sass/utils/: _config.scss  _margin.scss  _padding.scss
web/src/util/: http.js
