[metadata]
name = energy_saving 
summary = API's and implementations to support Application Level deployment.
description-file = README.rst
author = Huawei
author-email = xiaodongwang991481@gmail.com
home-page = http://
classifier =
    Environment :: ETA
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    energy_saving

[entry_points]
console_scripts =
    energy_saving_manage = energy_saving.bin.manage:main

wsgi_scripts =
    energy_saving_wsgi = energy_saving.bin.energy_saving_wsgi:initialize_application

[global]
setup-hooks =
    pbr.hooks.setup_hook

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = orca/locale
domain = orca

[update_catalog]
domain = orca
output_dir = energy_saving/locale
input_file = energy_saving/locale/energy_saving.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = energy_saving/locale/orca.pot
