[metadata]
name = energy_saving 
summary = API's and implementations to support Application Level deployment.
description-file = README.rst
author = Huawei
author-email = xiaodongwang991481@gmail.com
home-page = http://
classifier =
    Environment :: ETA
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    energy_saving
data_files =
    /etc/energy_saving = conf/settings conf/celeryconfig
    /etc/init.d = conf/energy-saving-celeryd

[entry_points]
console_scripts =
    energy-saving-manage = energy_saving.bin.manage:main
    energy-saving-db-manage = energy_saving.db.migration.cli:main
    energy-saving-server = energy_saving.bin.server:main

wsgi_scripts =
    energy-saving-wsgi = energy_saving.bin.wsgi:initialize_application

energy_saving.model_type_builders = 
    sensor_attributes_prediction = energy_saving.models.sensor_attribute_prediction_model_type_builder:SensorAttrPredictionModelTypeBuilder
    pue_prediction = energy_saving.models.pue_prediction_model_type_builder:PUEPredictionModelTypeBuilder
    controller_attribute_recovery = energy_saving.models.controller_attribute_recovery_model_type_builder:ControllerAttrRecoveryModelTypeBuilder
    controller_attributes_optimazation = energy_saving.models.controller_attribute_optimazation_model_type_builder:ControllerAttrOptimazationModelTypeBuilder
    controller_parameters_prediction = energy_saving.models.controller_parameter_prediction_model_type_builder:ControllerParamPredictionModelTypeBuilder
    decision = energy_saving.models.decision_model_type_builder:DecisionModelTypeBuilder

energy_saving.model_builders =
    linear_regression = energy_saving.models.linear_regression_model_builder:LinearRegressionBuilder
    
[global]
setup-hooks =
    pbr.hooks.setup_hook

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = orca/locale
domain = orca

[update_catalog]
domain = orca
output_dir = energy_saving/locale
input_file = energy_saving/locale/energy_saving.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = energy_saving/locale/orca.pot
